2010-06-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* applied patch from slif@bellsouth.net to fix compiler
	warnings. Patch applied partially since not all fixes were
	appropriate. fixes #1510
	
	* IPTImporter.cpp (IPTImporter::pushPolicyRule): fixed #1512 SF
	bug 3012953: iptables importer sometimes does not recognize rule
	with " ESTABLISHED,RELATED ". Parser properly processed iptables
	rules with state "RELATED,ESTABLISHED" but not when states were
	in the opposite order.

	* IPTImporter.cpp (IPTImporter::pushPolicyRule): policy importer
	for iptables can now parse numerical log levels.

	* Importer.cpp (Importer::getUDPService): fixed sourceforge bug
	3012953 name of UDP and TCP objects created during import should
	follow the same pattern and not include "0-0" for the source ports
	if they are equal to zero.

	* IPTImporter.cpp (IPTImporter::IPTImporter): fixed #1511, SF bug 3012953:
	iptables import parse error icmp_type any

2010-06-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::pixNetworkZoneChecks):
	fixed #1491 fwb_pix crashes trying to compile simple rule. Compiler
	should check validity of the object used as network zone of an interface.

	* FWBSettings.cpp (FWBSettings::init): fixed #1501 call qsrand(seed)
	to seed random generator before generating new UUID

	* TransferDevice.h (fwtransfer): fixed #1490 compile problem with
	Qt 4.7

	* FWWindow.cpp (FWWindow::prepareRulesMenu): fixed #1489 removed
	unnecessary debugging messages.

	* interfaceProperties.cpp (interfaceProperties::manageIpAddresses):
	fixed #1506 SF bug #3011516: generated iptables script tries to
	update ip addresses of unnumbered interface.

	* v4.0.2 started

2010-06-06  vadim  <vadim@vk.crocodile.org>

	* FWBSettings.cpp (FWBSettings::FWBSettings): using separate
	settings object and file in the .ini format to store instance uuid
	to ensure uuid persistence on windows across upgrades done with
	complete deinstall. Fixes #1497
